tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Phantasmal-AAAAAAAAAAAAAAAAAAAIjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2188,
  "prerequisites": [
    2189
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Phantasmal bees are similar to Spectral, except they cause the other drops to reanimate, like ghasts, spiders, creepers, endermen, or even Ender Dragons if their drops are lying around. Breed them from Spectral and Ender.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Phantasmal",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2189
  ],
  "rewards": [],
  "tasks": []
}
