tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Plutonium-AAAAAAAAAAAAAAAAAAAInQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2205,
  "prerequisites": [
    2200,
    2204
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A metal that represents the epitome of technology. Never existing in the universe before man. Destroying everything around it. This bee will require a block of Plutonium. Breed them from Uranium and Emerald.\n\n[note]Plutonium Combs are also used in a few crafting recipes![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Plutonium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2200,
    2204
  ],
  "rewards": [],
  "tasks": []
}
