tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Red-AAAAAAAAAAAAAAAAAAAI4A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2272,
  "prerequisites": [
    2156
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Dye bees obviously provide dyes, but some of them are also useful for their traits. There are many dye bees, these are just a sample. They can be useful for the hard to find dye colors from flowers. Breed Red from Common and Diligent.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Red",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2156
  ],
  "rewards": [],
  "tasks": []
}
